# aoc

2024/aoc2024_01/: Cargo.toml  report.txt
2024/aoc2024_01/src/: days.rs  lib.rs  main.rs
2024/aoc2024_01/src/d1/: mod.rs
2024/aoc2024_01/src/d2/: mod.rs
2024/aoc2024_01/src/days/: d3.rs  d4.rs  d5.rs
2024/aoc2024_01_p2/: Cargo.toml
2024/aoc2024_01_p2/src/: main.rs
2024/d10/: Cargo.toml
2024/d10/benches/: bench.rs
2024/d10/src/: lib.rs
2024/d11/: Cargo.toml
2024/d11/benches/: bench.rs
2024/d11/src/: lib.rs  xlib - Copy.rsx
2024/d12/: Cargo.toml
2024/d12/benches/: bench.rs
2024/d12/src/: lib.rs
2024/d13/: Cargo.toml
2024/d13/src/: lib.rs
2024/d14/: Cargo.toml  test.txt
2024/d14/benches/: bench.rs
2024/d14/src/: lib.rs
2024/d15/: Cargo.toml
2024/d15/src/: lib.rs
2024/d16/: Cargo.toml  part1.dot
2024/d16/src/: lib copy.hshshrs  lib.rs  lib.xrsyyy
2024/d17/: Cargo.toml
2024/d17/src/: lib.rs
2024/d18/: in.txt
2024/d18/src/: lib.rs
2024/d19/: Cargo.toml
2024/d19/src/: lib.rs
2024/d6/: Cargo.toml
2024/d6/benches/: bench.rs
2024/d6/src/: lib.rs  p1.rs
2024/d7/: Cargo.toml  in.txt
2024/d7/benches/: bench.rs
2024/d7/src/: lib.rs  p1.rs
2024/d8/: Cargo.toml
2024/d8/benches/: bench.rs
2024/d8/src/: lib.rs  p1.rs
2024/d9/: Cargo.toml
2024/d9/benches/: bench.rs
2024/d9/src/: lib.rs
