[package]
name = "d12"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
rayon = "1.10.0"
nom = "7.1.3"
miette = "7.4.0"
petgraph = "0.6.5"
glam = "0.29.2"
nom_locate = "4.2.0"

[dev-dependencies]
divan = "0.1.17"


[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
